Fix header on mobile
When narrowing down beyond a point, the nav buttons squeezed past the
logo.  The 1/3 block for the logo was too small at these widths.

- Divide header into halves
- Remove 'social' button
- Trim nav buttons
- Float nav buttons to right

--- a/css/style.css
+++ b/css/style.css
@@ -72,10 +72,6 @@ body > header {
 
 
 /* Header */
-#logo {
-   margin-top: 1em;
-   height: 10em;
-}
 
 #maintitle {
     margin-top: 0.5em;
@@ -120,8 +116,12 @@ nav li {
 .nav_button a {
   font-weight: 900;
   font-size: 18px;
-  padding: 0.5em 2em;
+  padding: 0.5em 1em;
   border-radius: 5px;
+}
+
+.main-nav ul {
+  float: right;
 }
 
 .main-nav li.current a {
